k8s/pod.minikube.yaml
apiVersion: v1
kind: Pod
metadata:
  name: snitch
  namespace: default
  labels:
    app: snitch
spec:
  containers:
  - name: snitch
    image: ingress-snitch:latest
    imagePullPolicy: Never
    resources:
      requests:
        cpu: 20m
        memory: 20Mi
      limits:
        cpu: 100m
        memory: 50Mi
  serviceAccountName: snitch
