k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: snitch
spec:
  containers:
  - name: snitch
    image: ingress-snitch:latest
    imagePullPolicy: Never
