k8s/ingressroute.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: snitch
spec:
  ports:
    - name: web
      port: 80
      targetPort: 8080
  selector:
    app: snitch
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-snitch
spec:
  stripPrefix:
    prefixes:
      - /snitch
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: snitch
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`localhost`) && PathPrefix(`/snitch`)
      services:
        - name: snitch
          port: 80
      middlewares:
      - name: strip-snitch
